fixed store logo alignment

--- a/app/assets/stylesheets/merchant_section.css.less
+++ b/app/assets/stylesheets/merchant_section.css.less
@@ -552,7 +552,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .store-logo-wrapper{
-    
+	width: 100%;
+    display: table;
     height: 173px;
     background: #fff;
     z-index: 99999;
